--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Analizador de Hipoteca brrrrr</h1>
+    <h1>Analizador de Hipoteca</h1>
 
     <form id="form-analisis">
       <div class="grid">
